Signed-off-by: jxnb

--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@ nice
 github account erstellen und repository (=webserver) erstellen
 </p>
 
+<figure> 
+	<img src="asian-1239271_960_720.jpg" alt="..."/>
+	<figcaption>Bildunterschrift</figcaption>
+</figure>
+
 </body>
 </html>
