Signed-off-by: Exenberger <csam5905@uibk.ac.at>

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ github account erstellen und repository (=webserver) erstellen
 </p>
 
 <figure> 
-	<img src="asian-1239271_960_720.jpg" alt="..."/>
+	<img src="C:\Users\csam5905\Desktop\WebMapping - Sitzung 02\jxnb.github.io" alt="sushi"/>
 	<figcaption>Bildunterschrift</figcaption>
 </figure>
 
