Signed-off-by: Exenberger <csam5905@uibk.ac.at>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ github account erstellen und repository (=webserver) erstellen
 
 <figure> 
 	<img src="asian-1239271_960_720.jpg" alt="sushi"/>
-	<figcaption>Bildunterschrift</figcaption>
+	<figcaption>sushi</figcaption>
 </figure>
 
 </body>
