--- a/Wien/index.html
+++ b/Wien/index.html
@@ -26,6 +26,14 @@
             border: 1px solid black;
             margin: auto;
         }
+        body {
+          padding: 0;
+          margin: 0;
+        }
+        html, body, #wienMap {
+          height: 100vh;
+          width: 100vw;
+     }
     </style>
 </head>
 
@@ -206,7 +214,7 @@
         map.removeLayer(linienWanderwege);
         map.removeLayer(maerkte);
         
-        var map = L.map('map').fitWorld();
+        var map = L.map('wienMap').fitWorld();
 
 L.tileLayer('https://api.tiles.mapbox.com/v4/MapID/997/256/{z}/{x}/{y}.png?access_token={accessToken}', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
