added new html files and NASA GIBs plugin

--- a/projekt/index02.html
+++ b/projekt/index02.html
@@ -11,14 +11,14 @@
   <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"
   integrity="sha512-A7vV8IFfih/D732iSSKi20u/ooOfj/AGehOKq0f4vLT1Zr2Y+RX7C+w8A1gaSasGtRUZpF/NZgzSAu4/Gc41Lg=="
   crossorigin=""></script>
-  <script src="js/map.js"></script>
+  <script src="js/map02.js"></script>
 </head>
 <body>
   <nav>
     <span>TITLE</span>
     <ul>
-      <li><a href="index02.html">Next</a></li>
-      <li>Previous</li>
+      <li><a href="index03.html">Next</a></li>
+      <li><a href="index.html">Previous</a></li>
     </ul>
   </nav>
 
